cambios para git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hola otra ves</title>
 </head>
 <body>
-    <p>Hola amigos este e sun sitio web</p>
+    <p>Hola amigos este e sun sitio web en donde voy a actualizar todo
+        cada vez que yo escriba algo  </p>
 </body>
 </html>
